--- a/shell_minimal.html
+++ b/shell_minimal.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Etsuko - Wooby</title>
-    <style>html,body{margin:0;height:100%;background:#111}canvas{display:block;margin:0 auto;max-width:100%;max-height:100%;}</style>
+    <style>html,body{margin:0;height:100%;background:#111}canvas{display:block;margin:0 auto;width:100vw;height:100vh;}</style>
 </head>
 <body>
 <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
